decode,interp: Rename unknown gap fields from "unknown#" to "gap#"
Think it makes it clearer and also less likely to collide with a field
name a deocder wants to use.

--- a/pkg/interp/testdata/value_t.fqtest.tmpl
+++ b/pkg/interp/testdata/value_t.fqtest.tmpl
@@ -27,7 +27,7 @@ PROMPT> EXPR._path | ., type, length?
 PROMPT> EXPR._bits | ., type, length?
 PROMPT> EXPR._bytes | ., type, length?
 PROMPT> EXPR._error | ., type, length?
-PROMPT> EXPR._unknown | ., type, length?
+PROMPT> EXPR._gap | ., type, length?
 PROMPT> EXPR.a = 1
 PROMPT> EXPR[0] = 1
 PROMPT> EXPR.a |= empty
