--- a/pkg/decode/decode_gen.go.tmpl
+++ b/pkg/decode/decode_gen.go.tmpl
@@ -7,6 +7,7 @@ import (
 
 	"github.com/wader/fq/pkg/bitio"
 	"github.com/wader/fq/pkg/scalar"
+	"golang.org/x/text/encoding"
 )
 
 {{- range $name, $t := $.types }}
