interp: Add skip_gaps option for tovalue/-V
Skips gap fields in struct and arrays.

Gaps fields are bit ranges that a decoder did not add any fields for.
Note that skipping gaps in arrays will affect indexes.

--- a/pkg/scalar/scalar_gen.go.tmpl
+++ b/pkg/scalar/scalar_gen.go.tmpl
@@ -31,7 +31,7 @@ import (
 	}
 	func (s {{$name}}) ScalarSym() any { return s.Sym }
 	func (s {{$name}}) ScalarDescription() string { return s.Description }
-	func (s {{$name}}) ScalarGap() bool { return s.Gap }
+	func (s {{$name}}) ScalarIsGap() bool { return s.Gap }
 	{{- if $t.display_format}}
 	func (s {{$name}}) ScalarDisplayFormat() DisplayFormat { return s.DisplayFormat }
 	{{- else }}
